# ImageViewer

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  ImageSwitcher.cpp  ImageSwitcher.h  MainWindow.cpp  MainWindow.h  ViewerWidget.cpp  ViewerWidget.h  imageswitcher.ui  main.cpp  mainwindow.ui
include/: ImgViewerWidget.h
src/: FullScreenWindow.cpp  FullScreenWindow.h  ImageViewer.cpp  ImageViewer.h  ImgViewerWidget.cpp  fullscreenwindow.ui
